gtk/sass/4.0/_misc.scss
/* ... */
paned.titlebar.horizontal {
  headerbar {
    button.flat.toggle.popup:not(.image-button) { // left-pane header button
      border-radius: 2px;
      -gtk-outline-radius: 2px;

      box > .title { color: $inverted_secondary_fg_color; }

      &:hover,
      &:active,
      &:checked {
        box > .title { color: $inverted_fg_color; }
      }
    }
  }
}

overlay > box.vertical > paned.horizontal > box.vertical {
  statusbar { // inline-toolbar styling
    padding: rem(2.7px);
    border-style: solid;
    border-width: 1px 0 0;
    border-color: $borders_color;
    background-color: $secondary_dark_color;
    box-shadow: if($variant == 'light', $inline-shadow-light,
                                        $inline-shadow-dark);
  }
}

notebook grid.horizontal > widget > box.horizontal > scrolledwindow {
  undershoot { // remove undershoot
    &.top,
    &.bottom,
    &.left,
    &.right { background-image: none; }
  }
}

.gedit-side-panel-paned.horizontal {
  // gradient separator
  separator {
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.24),
                                                 rgba(0, 0, 0, 0.11) 2px,
                                                 rgba(0, 0, 0, 0.05) 4px,
                                                 rgba(0, 0, 0, 0.05));
    background-position: left top;
    background-repeat: no-repeat;
    background-size: 1px auto;
  }

  // 'file-browser' pane
  > box.vertical > stack > grid.horizontal {
    padding: rem(2.7px);
    background-color: $secondary_dark_color;
    background-image: if($variant == 'light', $fake-shadow-light,
                                              $fake-shadow-dark);

    &:dir(ltr) { box-shadow: if($variant == 'light', $sidebar-light-ltr,
                                                     $sidebar-dark-ltr);
    }
    &:dir(rtl) { box-shadow: if($variant == 'light', $sidebar-light-rtl,
                                                     $sidebar-dark-rtl);
    }

    > box.horizontal {  // header-part
      margin: rem(4px) 0;

      button.image-button.small-button {
        // FIXME: why does gedit break our geometry everytime?
        min-width: $icon_size + 4px;
        min-height: $icon_size + 4px;
        padding: rem(5.3px);
	border-radius: 2px;
	-gtk-outline-radius: 2px;
      }

      .linked > .small-button { min-height: $icon_size + 4px; }

      button.popup.small-button.toggle {
        min-height: $icon_size + 4px;
        padding: rem(5.3px);
      }
    }

    > scrolledwindow { // raised widget
      margin: rem(5.3px);
      border-radius: 2px;
      box-shadow: $z-depth-1;
    }
  }
}

.gedit-document-panel { // 'documents' pane
  background-color: $secondary_dark_color;
  background-image: if($variant == 'light', $fake-shadow-light,
                                            $fake-shadow-dark);

  &:dir(ltr) { box-shadow: if($variant == 'light', $sidebar-light-ltr,
                                                   $sidebar-dark-ltr);
  }
  &:dir(rtl) { box-shadow: if($variant == 'light', $sidebar-light-rtl,
                                                   $sidebar-dark-rtl);
  }

  row.activatable {
    color: $secondary_fg_color;
    background-color: transparent;
    font-weight: 500;
    &:hover { color: $fg_color; }
    &:selected {
      color: $selected_bg_color;
      background-color: transparent;

      label { color: $selected_bg_color; }

      button {
        color: gtkalpha($selected_bg_color, 0.75);
        &:hover,
        &:active { color: $selected_bg_color; }
      }
    }

    // 'close' button
    widget > box.horizontal > button.flat.small-button {
      min-height: $icon_size;
      min-width: $icon_size;
      margin: rem(2.7px);
      padding: rem(5.3px);
      border-radius: 100px;
      -gtk-outline-radius: 100px;
    }
  }
}

// workaround for unity7
.background:not(.csd):not(.ssd) overlay > box > paned.horizontal {
  > headerbar {
    box-shadow: $menubar-shadow;

    &:not(:only-child) {
      button.flat.toggle.popup:not(.image-button) { // left-pane header button
        border-radius: 2px;
        -gtk-outline-radius: 2px;

        box > .title { color: $inverted_secondary_fg_color; }

        &:hover,
        &:active,
        &:checked {
          box > .title { color: $inverted_fg_color; }
        }
      }
    }
  }

  separator { // hide un-controllable pane-separator
    min-width: 0;
    margin: 0 rem(-6px); // hidden gap in .wide class
    padding: 0;
    background: none;
    background-image: none;
  }
}


/*****************
 * Gnome-Builder *
 *****************/

//
// do not use box-shadows. it's too problematic!
//

// work around some gtk padding issue
filechooser actionbar button.combo {
  padding: 0;
}

// styling for editor search
frame.gb-search-frame {
  background-image: linear-gradient(to bottom, $bg_color, $bg_color);
  padding: rem(6px);
  border-style: solid;
  border-color: $borders_color;
  border-left-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-radius: 0;
}

frame.gb-search-frame border { border: none; }

.gb-search-entry-occurrences-tag {
  color: $insensitive_fg_color;
  margin: rem(2px);
  padding: rem(2px);
  border-width: 0;
}

// Tweaks for the editortweak popover in the editor.
editortweak button { padding: 0 rem(6px) 0 rem(6px); }
editortweak list row { padding: 0; }

// Keep search bar and layouttab height in sync.
layouttabbar > box { min-height: rem(39px); }
eggsearchbar > revealer > box { min-height: rem(39px); }
eggsearchbar entry { min-height: rem(24px); }

// Pillbox is used to render "languages" in the greeter.
pillbox { border-radius: 2px; }

// Styling in the genesis (create project) perspective.
genesisperspective stack > box:first-child list row {
  padding: rem(10px);
  border-bottom: 1px solid $solid_light_borders_color;
  &:last-child { border-bottom: none; }
}
/* ... */

